Spark: Document how to run the equality-delete compaction benchmark on JDK 17+
Adds a Javadoc note to IcebergEqualityDeleteCompactionBenchmark
explaining that the jmh task's forked JVM does not inherit the
--add-opens flags that build.gradle's extraJvmArgs applies to
ordinary Test tasks (e.g. java.base/sun.nio.ch), which is why the
prior commit's run failed with IllegalAccessError even after fixing
the driver bind address. The workaround is to pass the same
--add-opens flags via an environment variable when invoking the jmh
task, since jmh.gradle/build.gradle may not be edited for this task.

Correction vs. the originally suggested workaround: JAVA_TOOL_OPTIONS
does NOT work for this on this JDK. Passing the extraJvmArgs
--add-opens flags via JAVA_TOOL_OPTIONS made even the Gradle wrapper's
own launcher JVM fail immediately with "Unrecognized option:
--add-opens" / "Error: Could not create the Java Virtual Machine"
(exit code 1, no Gradle task ever ran). The flags only work through
JDK_JAVA_OPTIONS (the environment variable OpenJDK has documented
since JDK 9 specifically for module-system flags like --add-opens);
JAVA_TOOL_OPTIONS is the older JVMTI-agent-oriented mechanism and
rejects them. The benchmark's Javadoc documents JDK_JAVA_OPTIONS, not
JAVA_TOOL_OPTIONS, because that is what was actually verified to work.

With the loopback driver fix (previous commit) plus
JDK_JAVA_OPTIONS carrying build.gradle's extraJvmArgs --add-opens
list, both attempted variants ran to completion and produced real
measurements on this host (macOS, 24 GB RAM, 10 cores, JDK 21.0.9
Zulu, JMH 1.37, mode ss = SingleShotTime, 5 iterations each, no
warmup):

IcebergEqualityDeleteCompactionBenchmark.readerLocal
  (deleteRowsPerFile=100000,  numDeleteFiles=4):  Cnt 5  Score   7.832 s/op  Error ±  1.977 s/op
  (deleteRowsPerFile=100000,  numDeleteFiles=16): Cnt 5  Score  11.420 s/op  Error ±  7.774 s/op
  (deleteRowsPerFile=1000000, numDeleteFiles=4):  Cnt 5  Score  27.718 s/op  Error ±  9.73